--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,21 +17,21 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="/devanagari.github.io/languages/devanagari-overview/devanagari-overview.html">Overview</a>
+          <a class="page-link" href="/devanagari-documentation/languages/devanagari-overview/devanagari-overview.html">Overview</a>
           <a class="page-link" href="https://www.motaitalic.com/tools/devanagari-font-tester/" target="_blank">Font Tester</a><br />
           <span class="divider">—</span><br />
-          <a class="page-link" href="/devanagari.github.io/languages/bhojpuri/bhojpuri.html">Bhojpuri</a>
-          <a class="page-link" href="/devanagari.github.io/languages/bodo/bodo.html">Bodo</a>
-          <a class="page-link" href="/devanagari.github.io/languages/dogri/dogri.html">Dogri</a>
-          <a class="page-link" href="/devanagari.github.io/languages/hindi/hindi.html">Hindi</a>
-          <a class="page-link" href="/devanagari.github.io/languages/kashmiri/kashmiri.html">Kashmiri</a>
-          <a class="page-link" href="/devanagari.github.io/languages/konkani/konkani.html">Konkani</a>
-          <a class="page-link" href="/devanagari.github.io/languages/maithili/maithili.html">Maithili</a>
-          <a class="page-link" href="/devanagari.github.io/languages/marathi/marathi.html">Marathi</a>
-          <a class="page-link" href="/devanagari.github.io/languages/nepali/nepali.html">Nepali</a>
-          <a class="page-link" href="/devanagari.github.io/languages/rajasthani/rajasthani.html">Rajasthani</a>
-          <a class="page-link" href="/devanagari.github.io/languages/sanskrit/sanskrit.html">Sanskrit</a>
-          <a class="page-link" href="/devanagari.github.io/languages/sindhi/sindhi.html">Sindhi</a>
+          <a class="page-link" href="/devanagari-documentation/languages/bhojpuri/bhojpuri.html">Bhojpuri</a>
+          <a class="page-link" href="/devanagari-documentation/languages/bodo/bodo.html">Bodo</a>
+          <a class="page-link" href="/devanagari-documentation/languages/dogri/dogri.html">Dogri</a>
+          <a class="page-link" href="/devanagari-documentation/languages/hindi/hindi.html">Hindi</a>
+          <a class="page-link" href="/devanagari-documentation/languages/kashmiri/kashmiri.html">Kashmiri</a>
+          <a class="page-link" href="/devanagari-documentation/languages/konkani/konkani.html">Konkani</a>
+          <a class="page-link" href="/devanagari-documentation/languages/maithili/maithili.html">Maithili</a>
+          <a class="page-link" href="/devanagari-documentation/languages/marathi/marathi.html">Marathi</a>
+          <a class="page-link" href="/devanagari-documentation/languages/nepali/nepali.html">Nepali</a>
+          <a class="page-link" href="/devanagari-documentation/languages/rajasthani/rajasthani.html">Rajasthani</a>
+          <a class="page-link" href="/devanagari-documentation/languages/sanskrit/sanskrit.html">Sanskrit</a>
+          <a class="page-link" href="/devanagari-documentation/languages/sindhi/sindhi.html">Sindhi</a>
         </div>
       </nav>
     {%- endif -%}
